# prometheus-metrics-client

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
program/: global_config.py
program/app/: main.py
program/config_templates/: global_config.yaml  v1.yaml
program/config_templates/internal_workflows/: k8s_pods_apps_labeler.yaml
program/connector/: __init__.py  client.py
program/models/: processor_model.py  promql_model.py
program/models/internal_workflows/: k8s_pods_apps_label_model.py
program/processors/: output_executor.py  processor.py  query_executor.py
program/processors/exporters/: csv_exporter.py  json_exporter.py
program/processors/internal_workflows/: internal_workflows_executor.py  k8s_pod_apps_label.py
program/test_suit/: global_test_config.py
program/test_suit/test_csv_output_executor/: main.py
program/test_suit/test_internal_workflows/k8s_pods_apps_labeler_test/: main.py  test_data.csv
program/test_suit/test_json_output_executor/: main.py
program/test_suit/test_output_executor/: main.py
program/test_suit/test_query_executor/: main.py
program/test_suits/test_connection/: main.py
program/test_suits/test_output_executor/: main.py
program/tests/: run.sh
program/tests/test_connection/: main.py
program/tests/test_csv_output_executor/: main.py
program/tests/test_query_executor/: main.py
